# qsv-toolkit

./: .buildinfo  .pre-commit-config.yaml  AGENTS.md  GOVERNANCE.md  README.md  REQUIREMENTS.md  dartfx.html  dartfx.qsv.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: dartfx.doctree  dartfx.qsv.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: sphinx.yaml  test.yml
_modules/: index.html
_modules/dartfx/qsv/: cmd.html  model.html
_sources/: dartfx.qsv.rst.txt  index.rst.txt
docs/source/: conf.py  dartfx.qsc.rst  dartfx.qsv.rst  dartfx.rst  modules.rst
references/: resources.md
references/cmd/: ALL.md  README.md  apply.md  behead.md  blake3.md  cat.md  clipboard.md  color.md  count.md  datefmt.md  dedup.md  describegpt.md  diff.md  edit.md  enum.md  excel.md  exclude.md  explode.md  extdedup.md  extsort.md  fetch.md  fetchpost.md  fill.md  fixlengths.md  flatten.md  fmt.md  foreach.md  frequency.md  geocode.md  geoconvert.md  headers.md  help.md  implode.md  index.md  input.md  join.md  joinp.md  json.md  jsonl.md  lens.md  (+36 more)
scripts/: precommit_uv_run.sh
src/dartfx/: __init__.py
src/dartfx/qsc/: __init__.py  cli.py
src/dartfx/qsv/: __about__.py  __init__.py  cmd.py  model.py  utils.py
tests/: conftest.py  test_cli.py  test_cmd_wrappers.py  test_qsv_version.py  test_utils.py
tests/data/: sdc_test.csv  sdc_test.stats.csv  sdc_test.stats.csv.data.jsonl  sdc_test.stats.csv.json
tests/data/sdc/: sdc_test.csv.schema.json
utils/: cmd_references.py  sdc_risk.sh
