[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dartfx-qsv"
dynamic = ["version"]
description = 'Package to facilitate integration with the datHere QSV Data Wrangling project'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [{ name = "kulnor", email = "pascal.heus@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pydantic >= 2.10.0"]

[project.urls]
Documentation = "https://github.com/DataArtifex/qsv-toolkit#readme"
Issues = "https://github.com/DataArtifex/qsv-toolkit/issues"
Source = "https://github.com/DataArtifex/qsv-toolkit"


[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/dartfx"]

[tool.hatch.version]
path = "src/dartfx/qsv/__about__.py"

[tool.hatch.envs.default]
dependencies = ["dev"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.12", "3.13"]

[tool.hatch.envs.types]
dependencies = ["dev"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dartfx/qsv tests}"

[tool.hatch.envs.docs]
dependencies = ["docs"]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build/html"
serve = "python -m http.server -d docs/build/html"

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source_pkgs = ["qsv", "tests"]
branch = true
parallel = true
omit = ["src/dartfx/qsv/__about__.py"]

[tool.coverage.paths]
source = ["src/dartfx/qsv", "*/qsv-toolkit/src/dartfx/qsv"]
tests = ["tests", "*/dartfx/qsv/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "PT",  # flake8-pytest-style
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["dartfx"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = "src"
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
  "coverage[toml]>=7.0.0",
  "pytest>=9",
  "pytest-benchmark>=5.0.0",
  "mypy>=1.0.0",
  "python-dotenv>=1.0.0",
  "ruff>=0.3.0",
  "pre-commit>=4.0.0",
  "ipykernel>=7.1.0",
  "jupyterlab>=4.5.2",
  "pyzmq>=27.1.0",
]
docs = [
  "sphinx>=8.0.0",
  "sphinx-rtd-theme>=3.0.0",
  "myst-parser>=4.0.0",
  "sphinx-copybutton>=0.5.2",
]
